# bomly-cli

./: .coderabbit.yaml  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  go.mod  go.sum
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pinact.yaml  requirements-ci-tools.in  requirements-ci-tools.txt
dev-docs/: ARCHITECTURE.md  CI.md  MODELS.md  RELEASE_CHECKLIST.md
docs/: ARCHITECTURE.md  AUDITORS.md  BASELINES.md  BOMLY_GUARD.md  CI.md  CI_INTEGRATION.md  CONFIG_REFERENCE.md  DETECTORS.md  EXIT_CODES.md  GETTING_STARTED.md  GLOSSARY.md  INSTALLATION.md  MATCHERS.md  MCP.md  MODELS.md  OUTPUT_FORMATS.md  PLUGINS.md  PLUGIN_GUIDE.md  REACHABILITY.md  README.md  REMEDIATION.md  SBOM.md  SBOM_ATTESTATIONS.md  SCAN_TARGETS.md  SCHEMAS.md  SUPPORT_MATRIX.md  TROUBLESHOOTING.md  TUI.md  USE_CASES.md  manifest.json
internal/detectors/python/testdata/lockfiles/poetry/: pyproject.toml
scripts/: install.ps1  install.sh  run-fuzz.sh
sdk/: analyzer.go  auditor.go  component.go  consolidation_view.go  container.go  container_test.go  coordinates.go  coordinates_test.go  dependency.go  dependency_source.go  dependency_source_test.go  detector.go  doc.go  ecosystem.go  finding_policy.go  fuzz_test.go  graph.go  graph_test.go  http.go  http_test.go  json.go  json_test.go  language.go  language_test.go  matcher.go  normalization.go  normalization_test.go  package.go  package_manager.go  (+22 more)
(+1044 files in other folders)
